# ESPScale

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.opencode/: server.lock.json
.opencode/git/: index.json
app/: .gitignore  pubspec.yaml
app/android/: settings.gradle.kts
app/lib/: config.dart  main.dart
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
docs/: build.md  changelog.md  environment.md  firmware.md
firmware/: platformio.ini
firmware-espidf/: CMakeLists.txt  PLAN.md  partitions_ota.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1
firmware-espidf/.opencode/: server.lock.json
firmware-espidf/src/: CMakeLists.txt  app_event_defs.h  config.h  main.c
firmware/.opencode/: server.lock.json
firmware/src/: ble_protocol.cpp  ble_protocol.h  ble_server.cpp  ble_server.h  command_dispatch.cpp  command_dispatch.h  config.h  http_client.cpp  http_client.h  main.cpp  mqtt_client.cpp  mqtt_client.h  protocol.cpp  protocol.h  scale_sensor.cpp  scale_sensor.h  state_machine.cpp  state_machine.h  storage.cpp  storage.h  utils.h  wifi_manager.cpp  wifi_manager.h
plans/: app.md  firmware.md  server.md
platfromio/: .gitignore  platformio.ini
platfromio/src/: main.cpp
scripts/: ble.py  generate_app_secrets.dart
secrets.template/: app_config.json  firmware_arduino.h  firmware_espidf.h  server.env
server/: alembic.ini  auth.py  config.py  database.py  deps.py  main.py  models.py  mqtt_bridge.py  mqtt_broker.py  requirements.txt  retention.py  schemas.py
server/alembic/: env.py
server/routes/: data.py  ws.py  (+1 more)
(+73 files in other folders)
